--- a/website/app/application/core/projects/project/files/edit.html
+++ b/website/app/application/core/projects/project/files/edit.html
@@ -1,28 +1,20 @@
+<div class="row" ng-if="activeFile">
+    <div class="col-xs-7" style="padding-right: 1px;">
+        <div class="details-main-content">
+            <div class="row">
+                <div class="col-xs-12">
+                    <div class="headings">{{activeFile.name}}
+                        <a ng-href="{{downloadSrc(activeFile)}}" download="{{activeFile.name}}">
+                        <span style="color: #9782be;padding-left:10px;" class="fa-stack fa-lg">
+                              <i class="fa fa-circle-thin fa-stack-2x"></i>
+                              <i class="fa fa-download fa-stack-1x fa-inverse"></i>
+                        </span></a>
+                    </div>
+                </div>
+            </div>
 
-<div class="details-main-content"  ng-if="activeFile">
-    <div class="row">
-        <div class="col-xs-4">
-            <h4><i class="fa fa-fw fa-file fa-1x"></i>
-                {{activeFile.name}}
-                <a ng-href="{{downloadSrc(activeFile)}}"
-                   download="{{activeFile.name}}">
-                    <i class="fa fa-fw fa-download"></i>
-                </a>
-            </h4>
-        </div>
-        <div ng-click="closeFile()"><i class="col-xs-1 fa fa-fw fa-close fa-1x pull-right pointer"></i></div>
-    </div>
-    <div class="row" style="border-top: 1px solid #d3d3d3;">
-        <div ng-click="showContent('details')" ng-class="{'file-details': bk.content === 'details'}"
-             class="col-xs-6"><a>Details</a>
-        </div>
-        <div ng-click="showContent('activity')" ng-class="{'file-details': bk.content === 'activity'}"
-             class="col-xs-6"><a>Activity</a></div>
-    </div>
-    <div ng-if="bk.content === 'details'">
-        <div class="row">
-            <div class="col-xs-6">
-                <div ng-switch="fileType">
+            <div class="row">
+                <div class="col-xs-11" ng-switch="fileType">
                     <div ng-switch-when="image">
                         <img class="img-responsive center-block"
                              ng-src="{{fileSrc(activeFile)}}">
@@ -49,60 +41,51 @@
                     </div>
                 </div>
             </div>
-            <div class="col-xs-6">
-                <div class="row" style="padding: 10px;">
-                    <b><i class="fa fa-fw fa-lock fa-2x"></i> </b> This file is not shared across projects
-                </div>
-                <hr/>
-                <div class="row" style="padding: 10px;">
-                    <span ng-show="!bk.editNote"> <b><i class="fa fa-fw fa-edit fa-2x"></i> </b>Note</span> <span
-                        class="pull-right">
+        </div>
+    </div>
+    <div class="col-xs-5" style="padding-left: 0px;">
+        <div class="details-main-content">
+            <div class="file headings">details</div>
+            <div class="row">
+                <div class="col-xs-3"> Type:</div>
+                <div class="col-xs-6">{{activeFile.mediatype}}</div>
+                <br>
+
+                <div class="col-xs-3"> Owner:</div>
+                <div class="col-xs-6">{{activeFile.owner}}</div>
+                <br>
+
+                <div class="col-xs-3"> Created:</div>
+                <div class="col-xs-6">{{activeFile.birthtime | toDateString}}</div>
+                <br>
+            </div>
+            <div class="file headings">note</div>
+            <div class="row">
+                    <span class="pull-right">
                             <a ng-click="editNote()"><i class="fa fa-fw fa-edit"></i></a></span>
 
-                    <div class="row" ng-show="!bk.editNote">
-                        <p><b>Title</b>: {{activeFile.notes[0].title}} </p>
-
-                        <div ta-bind ng-model="activeFile.notes[0].note"></div>
-                    </div>
+                <div class="row" ng-show="!bk.editNote">
+                    <div class="col-xs-3">Title:</div>
+                    <div ng-if="activeFile.notes" class="col-xs-8">{{activeFile.notes[0].title}}</div>
+                    <div class="col-xs-11" ta-bind ng-model="activeFile.notes[0].note"></div>
                 </div>
                 <div class="row" ng-show="bk.editNote">
                     <create-note item-type="datafile" item="activeFile"></create-note>
                 </div>
-                <hr/>
-                <div class="row" style="padding: 10px;">
-                    <div class="col-xs-3"> Media Type:</div>
-                    <div class="col-xs-3">{{activeFile.mediatype}}</div>
-                    <br>
-
-                    <div class="col-xs-3"> Owner:</div>
-                    <div class="col-xs-3">{{activeFile.owner}}</div>
-                    <br>
-
-                    <div class="col-xs-3"> Created:</div>
-                    <div class="col-xs-3">{{activeFile.birthtime | toDateString}}</div>
-                    <br>
+            </div>
+            <div class="file headings">tag</div>
+            <div class="row" style="padding: 10px;">
+                <div class="row">
+                    <tags-input on-tag-added="addTag($tag)" display-property="id"
+                                on-tag-removed="removeTag($tag)" ng-model="activeFile.tags"
+                                placeholder="Add a Tag" replace-spaces-with-dashes="false">
+                        <!--<auto-complete source="loadMovies($query)"-->
+                        <!--min-length="0"-->
+                        <!--debounce-delay="0"-->
+                        <!--max-results="10"></auto-complete>
+                        </tags-input>-->
                 </div>
-                <hr/>
-                <div class="row" style="padding: 10px;">
-                    <b> <i class="fa f-fw fa-tags fa-2x"></i></b> Tags :<span class="pull-right"><i
-                        class="fa fa-fw fa-edit"></i></span>
-
-                    <div class="row">
-                        <tags-input on-tag-added="addTag($tag)" display-property="id"
-                                    on-tag-removed="removeTag($tag)" ng-model="activeFile.tags"
-                                    placeholder="Add a Tag" replace-spaces-with-dashes="false">
-                            <!--<auto-complete source="loadMovies($query)"-->
-                            <!--min-length="0"-->
-                            <!--debounce-delay="0"-->
-                            <!--max-results="10"></auto-complete>
-                            </tags-input>-->
-                    </div>
-                </div>
-                <hr/>
             </div>
         </div>
-    </div>
-    <div ng-if="bk.content === 'activity'">
-        Activity Log here...
     </div>
 </div>
