--- a/website/app/application/core/projects/project/files/files.html
+++ b/website/app/application/core/projects/project/files/files.html
@@ -17,14 +17,11 @@
                         <button class="btn-details-container btn-files btn btn-default"> Upload</button>
                     </div>
                 </div>
-                <file-upload-panel></file-upload-panel>
-                <mc-tree items="files"
-                         matches="matchingFiles"
-                         orderby="'name'"
-                         check-box="showCheckBox">
-                </mc-tree>
+                <div style="padding: 20px;width: 100%; height: 100%;"
+                     angular-grid="gridOptions"
+                     class="ag-file-browser">
+                </div>
             </div>
-
         </div>
         <div class="col-xs-8" stylex="margin-left: 10px;">
             <div ui-view></div>
