update to the process details page

--- a/website/app/application/core/projects/project/reviews/reviews.html
+++ b/website/app/application/core/projects/project/reviews/reviews.html
@@ -28,7 +28,7 @@
                             </button>
                         </div>
                     </div>
-                    <ul class="list-group" style="">
+                    <ul class="list-group">
                         <li class="list-group-item pointer"
                             ng-repeat="each_review in reviews"
                             ng-class="{active: review.id === each_review.id}"
