--- a/website/app/index.html
+++ b/website/app/index.html
@@ -209,6 +209,10 @@
 <script src="application/core/projects/project/processes/processes-controller.js"></script>
 <script src="application/core/projects/project/processes/process-network-view.js"></script>
 <script src="application/core/projects/project/processes/process-check-service.js"></script>
+<script src="application/core/projects/project/processes/process-list-controller.js"></script>
+<script src="application/core/projects/project/processes/process-create-controller.js"></script>
+<script src="application/core/projects/project/processes/template-instance-controller.js"></script>
+<script src="application/core/projects/project/processes/template-service.js"></script>
 <script src="application/core/projects/project/project-size-filter.js"></script>
 <script src="application/core/projects/project/project-file-count-filter.js"></script>
 <script src="application/core/projects/project/help/userguide.js"></script>
