--- a/website/app/application/core/projects/project/processes/create.html
+++ b/website/app/application/core/projects/project/processes/create.html
@@ -64,11 +64,11 @@
                     <div class="row">
                         <input class="col-xs-10" class="form-control" ng-model="model.process_info.description"
                                placeholder="Description">
-                    </div>                                          Ruyi.Hao@rndsystems.com
+                    </div>
                     <br>
 
                     <div class="row">
-                        <i style="color:#3a9ee3" class="fa fa-plus fa-fw"></i> <span style="color:#3a9ee3"><a>Setup</a></span>
+                        <i style="color:#3a9ee3" class="fa fa-plus fa-fw"></i> <span style="color:#3a9ee3"><a ng-click="setUp()">Setup</a></span>
                     </div>
                     <br>
 
@@ -76,11 +76,6 @@
                         <i style="color:#3a9ee3" class="fa fa-plus fa-fw"></i> <span style="color:#3a9ee3"><a>Measurement</a></span>
                     </div>
                     <br>
-
-                    <!--<div style="color:#3a9ee3" class="row">-->
-                        <!--<i style="color:#3a9ee3" class="fa fa-plus fa-fw"></i> <span style="color:#3a9ee3"><a>Sample</a></span>-->
-                    <!--</div>-->
-                    <!--<br>-->
                     <hr class="divider"/>
                     <div class="row">
                         <div class="col-xs-12 process headings">Attachment</div>
