update the process detail page

--- a/website/app/application/core/projects/project/processes/create.html
+++ b/website/app/application/core/projects/project/processes/create.html
@@ -9,10 +9,8 @@
                 </div>
                 <div class="row">
                     <div class="col-xs-8">
-                        <b>Process Information</b>
-
-                        <div><label>What:</label>{{model.process_info.what}}</div>
-                        <div><label>Why:</label>{{model.process_info.why}}</div>
+                        <div><label>What did you do ?</label>{{model.process_info.what}}</div>
+                        <div><label>Why did you do ?</label>{{model.process_info.why}}</div>
                     </div>
                 </div>
                 <hr class="divider"/>
@@ -108,6 +106,7 @@
                                     <i ng-click="removeAttachment(attachment)"
                                        class="fa fa-fw fa-close pull-right pointer"></i>
                                 </div>
+
                             </div>
                         </div>
                     </div>
