--- a/website/app/application/core/projects/project/processes/create.html
+++ b/website/app/application/core/projects/project/processes/create.html
@@ -10,7 +10,7 @@
                 <div class="row">
                     <div class="col-xs-8">
                         <div><label>What did you do ?</label>{{model.process_info.what}}</div>
-                        <div><label>Why did you do ?</label>{{model.process_info.why}}</div>
+                        <div><label>Why did you do this?</label>{{model.process_info.why}}</div>
                     </div>
                 </div>
                 <hr class="divider"/>
@@ -25,7 +25,7 @@
                     <div class="col-xs-8">
                         <b>Samples</b>
 
-                        <div class="row" ng-repeat="attachment in model.attachments">
+                        <div class="row" ng-repeat="attachment in model.attachments.samples">
                             <div ng-if="attachment.type === 'sample'">
                                 <i class="fa fa-fw fa-paperclip fa-lg" style="color: #919191"></i>
                                 <img src="assets/img/splash/sample_icon.png"
@@ -41,7 +41,16 @@
                     <div class="col-xs-8">
                         <b>Files</b>
 
-                        <div class="row" ng-repeat="attachment in model.attachments">
+                        <div class="row" ng-repeat="attachment in model.attachments.inputFiles">
+                            <div ng-if="attachment.type === 'datafile'">
+                                <i class="fa fa-fw fa-paperclip fa-lg" style="color: #919191"></i>
+                                <img src="assets/img/splash/file_icon.png"
+                                     style="height: 40px;padding-bottom: 10px;">
+                                <a ng-click="openDetails(attachment)" class="link pointer"
+                                   style="padding-left: 15px;">{{attachment.name}}</a>
+                            </div>
+                        </div>
+                        <div class="row" ng-repeat="attachment in model.attachments.outputFiles">
                             <div ng-if="attachment.type === 'datafile'">
                                 <i class="fa fa-fw fa-paperclip fa-lg" style="color: #919191"></i>
                                 <img src="assets/img/splash/file_icon.png"
@@ -68,7 +77,7 @@
                     <br>
                     Why did you do?
                     <div class="row">
-                        <textarea placeholder="Why" ng-model="model.process_info.what" class="form-control col-xs-8">
+                        <textarea placeholder="Why" ng-model="model.process_info.why" class="form-control col-xs-8">
                         </textarea>
                     </div>
                     <br>
@@ -83,14 +92,14 @@
                         <div class="col-xs-12 process headings">Samples</div>
                         <div class="row" style="padding: 15px;">
                             <br>
-                            <button ng-click="open('lg')"
+                            <button ng-click="open('lg', 'samples')"
                                     style="border: 3px dotted #d3d3d3;border-radius: 3px;color: #d3d3d3 "
                                     class="btn btn-default"><i
                                     class="fa fa-fw fa-plus"></i> ADD
                             </button>
                             <br><br>
 
-                            <div class="row" ng-repeat="attachment in model.attachments">
+                            <div class="row" ng-repeat="attachment in model.attachments.samples">
                                 <div ng-if="attachment.type === 'sample'" class="col-xs-12">
                                     <i class="fa fa-fw fa-paperclip fa-lg" style="color: #919191"></i>
                                     <img src="assets/img/splash/sample_icon.png"
@@ -116,15 +125,15 @@
                         <div class="row" style="padding: 15px;">
                             <br>
                             What files are used by this process? <br>
-                            <button ng-click="open('lg')"
+                            <button ng-click="open('lg', 'inputFiles')"
                                     style="border: 3px dotted #d3d3d3;border-radius: 3px;color: #d3d3d3 "
                                     class="btn btn-default"><i
                                     class="fa fa-fw fa-plus"></i> ADD
                             </button>
                             <br><br>
 
-                            <div class="row" ng-repeat="attachment in model.attachments">
-                                <div ng-if="attachment.type === 'datafile'" class="col-xs-5">
+                            <div class="row" ng-repeat="attachment in model.attachments.inputFiles">
+                                <div ng-if="attachment.type === 'datafile'" class="col-xs-8">
                                     <i class="fa fa-fw fa-paperclip fa-lg" style="color: #919191"></i>
                                     <img src="assets/img/splash/file_icon.png"
                                          style="height: 40px;padding-bottom: 10px;">
@@ -135,15 +144,15 @@
                                 </div>
                             </div>
                             What files are produced by this process?<br>
-                            <button ng-click="open('lg')"
+                            <button ng-click="open('lg', 'outputFiles')"
                                     style="border: 3px dotted #d3d3d3;border-radius: 3px;color: #d3d3d3 "
                                     class="btn btn-default"><i
                                     class="fa fa-fw fa-plus"></i> ADD
                             </button>
                             <br><br>
 
-                            <div class="row" ng-repeat="attachment in model.attachments">
-                                <div ng-if="attachment.type === 'datafile'" class="col-xs-5">
+                            <div class="row" ng-repeat="attachment in model.attachments.outputFiles">
+                                <div ng-if="attachment.type === 'datafile'" class="col-xs-8">
                                     <i class="fa fa-fw fa-paperclip fa-lg" style="color: #919191"></i>
                                     <img src="assets/img/splash/file_icon.png"
                                          style="height: 40px;padding-bottom: 10px;">
