Fixes for angular-grid version and reference to google fonts (moved out of gulp build block).

--- a/website/app/index.html
+++ b/website/app/index.html
@@ -14,6 +14,7 @@
     <![endif]-->
     <!-- Fav and touch icons -->
     <link rel="shortcut icon" href="assets/ico/mc-favicon.ico">
+    <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900,100,100italic,300italic,400italic,500italic,700italic,900italic' rel='stylesheet' type='text/css'>
 
     <!-- build:css assets/css/style.css -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -36,7 +37,6 @@
     <link href="bower_components/ag-grid/dist/theme-fresh.css" rel="stylesheet">
 
     <!-- Application style sheet -->
-    <link href='http://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900,100,100italic,300italic,400italic,500italic,700italic,900italic' rel='stylesheet' type='text/css'>
     <link href="assets/css/style-3.css" rel="stylesheet">
     <!-- endbuild -->
 </head>
