--- a/website/app/application/core/projects/project/processes/measurements.html
+++ b/website/app/application/core/projects/project/processes/measurements.html
@@ -24,15 +24,31 @@
             <div class="col-xs-8 details-main-content">
                 <div ng-if="enterValue === false">
                     <div class="row pull-right">
-                        <button class="btn btn-primary" ng-click="enterValue(measurement)">Enter {{measurement}}</button>
+                        <button class="btn btn-primary" ng-click="editMeasurement(measurement)">Enter {{measurement}}
+                        </button>
                     </div>
                     <b>{{measurement}}</b> Details here...
                 </div>
                 <div ng-if="enterValue===true">
-                    <b>{{measure}}</b>
-                     <input class="form-control col-xs-4" ng-model="value" placeholder="Enter value...">
-                </div>
+                    <div class="row" ng-repeat="choice  in choices">
+                        <div class="col-xs-3">
+                            <b>{{measure}}:</b>
+                        </div>
+                        <div class="col-xs-5">
+                            <input class="form-control" ng-model="choice.value" placeholder="Value...">
+                        </div>
+                        <div class="col-xs-2">
+                            <i ng-click="addNewChoice()" style="color:#3a9ee3" class="fa fa-plus fa-fw"></i>
+                        </div>
+                    </div>
 
+                    <div class="row">
+                        <div class="col-xs-3">
+                            <button class="btn btn-primary" ng-click="done()">Done</button>
+
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
