Clean up the code. There was no ending tag for tags-input because the ending tag was included in commented out html.

--- a/website/app/application/core/projects/project/files/edit.html
+++ b/website/app/application/core/projects/project/files/edit.html
@@ -43,7 +43,7 @@
             </div>
         </div>
     </div>
-    <div class="col-xs-5" style="padding-left: 0px;">
+    <div class="col-xs-5" style="padding-left: 0px;padding-right: 0px">
         <div class="details-main-content">
             <div class="file headings">details</div>
             <div class="row">
@@ -67,7 +67,8 @@
                 <div class="row" ng-show="!bk.editNote">
                     <div class="col-xs-3">Title:</div>
                     <div class="col-xs-8">{{activeFile.notes[0].title}}</div>
-                    <div ng-if="activeFile.notes.length !== 0" class="col-xs-11" ta-bind ng-model="activeFile.notes[0].note"></div>
+                    <div ng-if="activeFile.notes.length !== 0" class="col-xs-11" ta-bind
+                         ng-model="activeFile.notes[0].note"></div>
                 </div>
                 <div class="row" ng-show="bk.editNote">
                     <create-note item-type="datafile" item="activeFile"></create-note>
@@ -79,11 +80,7 @@
                     <tags-input on-tag-added="addTag($tag)" display-property="tag_id"
                                 on-tag-removed="removeTag($tag)" ng-model="activeFile.tags"
                                 placeholder="Add a Tag" replace-spaces-with-dashes="false">
-                        <!--<auto-complete source="loadMovies($query)"-->
-                        <!--min-length="0"-->
-                        <!--debounce-delay="0"-->
-                        <!--max-results="10"></auto-complete>
-                        </tags-input>-->
+                    </tags-input>
                 </div>
             </div>
         </div>
