--- a/website/app/application/core/projects/project/processes/measurements.html
+++ b/website/app/application/core/projects/project/processes/measurements.html
@@ -16,7 +16,7 @@
                         <li ng-class="{'active': measurement === selected.item}" ng-click="showDetails(measurement)"
                             ng-repeat="measurement in measurements | filter:search"
                             class="list-group-item pointer">
-                            <div>{{measurement}}</div>
+                            <div>{{measurement.name}}</div>
                         </li>
                     </ul>
                 </div>
@@ -24,15 +24,15 @@
             <div class="col-xs-8 details-main-content">
                 <div ng-if="enterValue === false">
                     <div class="row pull-right">
-                        <button class="btn btn-primary" ng-click="editMeasurement(measurement)">Enter {{measurement}}
+                        <button class="btn btn-primary" ng-click="editMeasurement(measurement)">Enter {{measurement.name}}
                         </button>
                     </div>
-                    <b>{{measurement}}</b> Details here...
+                    <b>{{measurement.name}}</b> Details here...
                 </div>
                 <div ng-if="enterValue===true">
                     <div class="row" ng-repeat="choice  in choices">
                         <div class="col-xs-3">
-                            <b>{{measure}}:</b>
+                            <b>{{measure.name}}:</b>
                         </div>
                         <div class="col-xs-5">
                             <input class="form-control" ng-model="choice.value" placeholder="Value...">
