updates to the processes page

--- a/website/app/application/core/projects/project/processes/create.html
+++ b/website/app/application/core/projects/project/processes/create.html
@@ -188,7 +188,7 @@
                                     </span>
                                     <div ng-if="link" class="row">
                                         <select  ng-change="linkSample(attachment, 'inputFiles')"
-                                                 ng-model="selectedSample"
+                                                 ng-model="bk.selectedSample"
                                                  data-placeholder="Choose Sample"
                                                  class="form-control"
                                                  validator="required">
@@ -222,7 +222,7 @@
                                     </span>
                                     <div ng-if="link" class="row">
                                         <select  ng-change="linkSample(attachment, 'outputFiles')"
-                                                 ng-model="selectedSample"
+                                                 ng-model="bk.selectedSample"
                                                  data-placeholder="Choose Sample"
                                                  class="form-control"
                                                  validator="required">
