--- a/website/app/application/core/projects/project/modal/files-modal.html
+++ b/website/app/application/core/projects/project/modal/files-modal.html
@@ -5,6 +5,7 @@
                  src="assets/img/splash/file_icon.png">
             <span style="color: #9F88C1; font-size: 20px;padding-left: 15px;">FILES</span>
         </div>
+        {{gridOptions.selectedRows}}
         <div class="panel-body home-panel-body no-max-height">
             <div style="padding: 20px;width: 100%; height: 100%;"
                  angular-grid="gridOptions"
