--- a/website/app/application/core/projects/project/modal/samples-modal.html
+++ b/website/app/application/core/projects/project/modal/samples-modal.html
@@ -5,6 +5,7 @@
                  src="assets/img/splash/sample_icon.png">
             <span style="color: #3A9EE3; font-size: 20px;padding-left: 15px;">SAMPLES</span>
         </div>
+        {{gridOptions.selectedRows}}
         <div class="panel-body"
              ng-class="{'no-max-height': isExpanded()}">
             <div ng-if="project.samples.length!== 0" style="width: 100%;height:100%"
